fix: tweak weird gap between search box and suggestion

--- a/resources/skins.citizen.search/skins.citizen.search.less
+++ b/resources/skins.citizen.search/skins.citizen.search.less
@@ -10,7 +10,7 @@
 	width: 100%;
 	max-height: ~'calc( 100vh - var( --height-header ) )';
 	box-sizing: border-box;
-	margin: 0;
+	margin-top: -2px;
 	border-radius: 0 0 var( --border-radius--large ) var( --border-radius--large );
 	.citizen-card( @border-radius: false );
 
